RESOLVED FIXED262032
REGRESSION(268243@main) ~9/21: MotionMark Images 15% on multiple models
https://bugs.webkit.org/show_bug.cgi?id=262032
Summary REGRESSION(268243@main) ~9/21: MotionMark Images 15% on multiple models
Kimmo Kinnunen
Reported 2023-09-25 01:26:56 PDT
REGRESSION(268243@main) ~9/21: MotionMark Images 15% on multiple models
Attachments
Kimmo Kinnunen
Comment 1 2023-09-25 01:27:20 PDT
Kimmo Kinnunen
Comment 2 2023-09-25 01:41:57 PDT
EWS
Comment 3 2023-09-26 00:34:11 PDT
Committed 268438@main (de7538e40c42): <https://commits.webkit.org/268438@main> Reviewed commits have been landed. Closing PR #18151 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.